fix toggles vs tabs zindex issue when scrolling on mobile

--- a/apps/pie-microsite/src/assets/styles/components/_tabs.scss
+++ b/apps/pie-microsite/src/assets/styles/components/_tabs.scss
@@ -3,6 +3,7 @@
 $tabs-link-padding:                f.spacing(d);
 
 .c-tabs {
+  z-index: f.zIndex(mid);
   font-weight: f.$font-weight-bold;
   padding: 0;
 
